/**
 * Copyright 2017-2021 O2 Czech Republic, a.s.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/* Dummy scheme messages to validate in test cases. */
syntax = "proto3";
option java_package = "cz.o2.proxima.scheme.proto.test";

message Event {
  string gatewayId = 1;
  bytes payload = 2;
}

message Users {
  repeated string user = 1;
}

message Armed {
  bool armed = 1;
}

message Status {
  bool connected = 1;
  uint64 lastContact = 2;
}

message Device {
  string type = 1;
  bytes payload = 2;
}

message RuleConfig {
  bytes payload = 1;
}

message ValueSchemeMessage {
  enum Directions {
    NONE = 0;
    LEFT = 1;
    RIGHT = 2;
  }
  enum SecondEnum {
    VALUE1 = 0;
    VALUE2 = 1;
  }
  message SecondInnerMessage {
    float inner_float_type = 1;
  }
  message InnerMessage {
    repeated string repeated_inner_string = 1;
    Directions inner_enum = 2;
    double inner_double_type = 3;
    SecondInnerMessage inner_inner_message = 4;
  }
  repeated string repeated_string = 1;
  repeated InnerMessage repeated_inner_message = 2;
  InnerMessage inner_message = 3;
  string string_type = 4;
  bool boolean_type = 5;
  uint64 long_type = 6;
  uint32 int_type = 7;
  repeated bytes repeated_bytes = 8;
}

message RecursiveMessage {
  RecursiveMessage recursion = 1;
}
